2010-08-02  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: debugger code should serialize call frames to InspectorObjects instead of SerializedScriptValues.
        https://bugs.webkit.org/show_bug.cgi?id=43339

        No new tests. Refactoring.

        * inspector/InjectedScript.cpp:
        (WebCore::InjectedScript::callFrames):
        * inspector/InjectedScript.h:
        * inspector/Inspector.idl:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::editScriptSource):
        (WebCore::InspectorController::getScriptSource):
        (WebCore::InspectorController::currentCallFrames):
        (WebCore::InspectorController::didPause):
        * inspector/InspectorController.h:
        * inspector/front-end/InspectorBackendStub.js:
        (WebInspector.InspectorBackendStub):

2010-08-03  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        Cleanup all of svg/ code
        https://bugs.webkit.org/show_bug.cgi?id=43311

        Unify the license header in all files in svg/, to use the same template as most WebCore files use.
        Unified email adress style, etc. all generated with a perl script attached to bug 43311.i

        * svg/...: Updated header template in all files, in the svg/ subdirectory.

2010-08-03  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Adam Barth.

        Turn all callbacks into ActiveDOMObjects and create callbacks in the correct context.
        https://bugs.webkit.org/show_bug.cgi?id=40112

        Test: http/tests/storage/callbacks-are-called-in-correct-context.html

        * CMakeLists.txt: Added new files.
        * DerivedSources.make:
        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:

        * bindings/generic/ActiveDOMCallback.cpp: Added. The base class